# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2010  Vasco Nunes, Piotr Ożarowski


2010-11-23  Michael Jahn
	* added screenplay, cameraman and barcode to the search criteria combobox

2010-11-16  Michael Jahn
	* added fields screenplay, cameraman, width, height and barcode to the html export plugin

---- 0.12.1 ----

2010-10-18  Piotr Ożarowski
	* Version changed to 0.12.1

2010-10-18  Michael Jahn
	* stabilized upgrade procedure for databases which are corrupt after an interuption of a previous upgrade procedure
	* enabled interactive search by number, title and original title in mainlist ("typeahead find")

2010-10-17  Michael Jahn
	* Allocine plugin updated
	* error fixed which prevents updates from pre-0.11 versions

2010-10-14  Michael Jahn
	* E-Pipoca plugin updated

2010-10-09  Michael Jahn
	* OFDb and IMDb plugin updated

2010-10-08  Piotr Ożarowski
	* Filmweb movie plugin updated (thanks to Mariusz Szczepanek)

2010-10-08  Michael Jahn
	* IMDb plugin updated

---- 0.12 ----

2010-10-03  Piotr Ożarowski
	* Update translations
	* Version changed to 0.12

2010-10-01  Michael Jahn
	* [#640219] Original title is not well raised by Allocine plugin

2010-09-30  Michael Jahn
	* saving the width of the columns of the mainlist
	* default filter operator changed from equals to contains

2010-09-29  Michael Jahn
	* added fields "created" and "updated" to movie entries

2010-09-25  Michael Jahn
	* [#502990] Own settings will not be saved in HTML-Export

2010-09-15  Michael Jahn
	* workaround for [#574370] freeze when i select existing mysql database

2010-08-29  Piotr Ożarowski
    * Show deprecation warnings only in debug mode

2010-08-26  Michael Jahn
	* small backup optimizations

2010-08-22  Michael Jahn
	* reintroduce menu entry for loading and removing cover posters

2010-07-21  Michael Jahn
	* compatibility fixes for sqlalchemy 0.6
	* adjusting sqlite page size to the value of the filesystem page size
	  (performance optimization)
